--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19.2
+	minecraft_version=1.20
 	yarn_mappings=1.19.2+build.28
 	loader_version=0.14.10
 
@@ -14,7 +14,7 @@ org.gradle.jvmargs=-Xmx4G
 
 # Dependencies
 	#Fabric api
-	fabric_version=0.66.0+1.19.2
+	fabric_version=0.14.21
 	modmenu_version = 4.1.0
     sodium_version=mc1.19.2-0.4.4
 	iris_version=1.5.2+1.19.2
